--- a/dara/rtl.css
+++ b/dara/rtl.css
@@ -54,7 +54,6 @@ li > ol {
 }
 
 blockquote {
-	border-right: 2px solid #f2f2f2;
 	padding-right: 1em;
 	padding-left: 0;
 	border-left: none;
